tests/diagnostics/cases/types/03_let_type_mismatch_int_to_bool.home.expected
Checking: <repo>/tests/diagnostics/cases/types/03_let_type_mismatch_int_to_bool.home

error: Type mismatch
  expected: bool
     found: int

  --> <repo>/tests/diagnostics/cases/types/03_let_type_mismatch_int_to_bool.home:3:21
   |
   3 |     let x: bool = 1 + 1
   |                      ^
   |
   = help: use comparison operators (==, !=, <, >) instead of int
