tests/diagnostics/cases/types/03_let_type_mismatch_int_to_bool.home
// Type mismatch with helpful suggestion to use comparison operators.
fn main() {
    let x: bool = 1 + 1
}
